--- a/css/style.css
+++ b/css/style.css
@@ -291,8 +291,8 @@ h1::after {
 .fix-content-center-intro {
    width: 1100px;
    margin: 0 auto;
-   margin-top: 80px;
-   margin-bottom: 20px;
+   margin-top: 110px;
+   margin-bottom: 50px;
 }
 
 .intro-btn-container {
@@ -335,7 +335,7 @@ h1::after {
 #fix-content-center-work {
    width: 1100px;
    margin: 0 auto;
-   padding: 80px 0;
+   padding: 110px 0;
    display: flex;
    flex-wrap: wrap;
    gap: 24px;
@@ -480,7 +480,7 @@ body.hasHover .overlay:hover {
    display: flex;
    justify-content: center;
    align-items: center;
-   gap: 32px;
+   gap: 26px;
    margin: 32px 24px;
    flex-wrap: wrap;
 }
@@ -551,7 +551,7 @@ body.hasHover .overlay:hover {
    width: 1100px;
    height: inherit;
    margin: 0 auto;
-   padding-top: 110px;
+   padding: 110px 0;
    display: flex;
    justify-content: space-between;
 }
@@ -574,7 +574,6 @@ body.hasHover .overlay:hover {
    font-size: 1rem;
    font-weight: 400;
    line-height: 23px;
-   margin: 16px 0;
 }
 
 #about h3::after {
@@ -584,8 +583,9 @@ body.hasHover .overlay:hover {
 
 #about-text-container {
    width: 545px;
-   height: auto;
-   margin-bottom: 110px;
+   display: flex;
+   flex-direction: column;
+   gap: 16px;
 }
 
 /* FORM/CONNECT =================================== */
@@ -603,7 +603,8 @@ body.hasHover .overlay:hover {
    width: 1100px;
    height: auto;
    margin: 0 auto;
-   padding-top: 110px;
+   padding: 110px 0;
+   padding-bottom: 80px;
    display: flex;
    justify-content: space-between;
 }
@@ -681,7 +682,7 @@ form button {
    border-radius: 8px;
    padding: 26px;
    height: 46px;
-   margin: 40px 0;
+   margin-top: 40px;
    margin-right: 16px;
    transition: all ease-in-out .2s;
    cursor: pointer;
